Make sure title text does not overlap dmb-panel-trigger [touch: 906157198869671]

--- a/src/static/src/scss/pages/_landing.scss
+++ b/src/static/src/scss/pages/_landing.scss
@@ -14,7 +14,7 @@
 
   .dmb-panel-trigger {
     &__button {
-      @include dmb-responsive(top, 10, 66);
+      @include dmb-responsive(top, 60, 66);
     }
 
     @include bp(m) {
@@ -31,6 +31,20 @@
         @include bp(m) {
           transform: translateX(175px);
         }
+      }
+    }
+  }
+  // Make sure title text doesn't overlap dmb-panel-trigger
+  .dmb-section-with-media__col-content:first-of-type() {
+    .dmb-section-with-media__title {
+      padding-right: 50px;
+
+      @include bp(s) {
+        padding-right: 25px;
+      }
+
+      @include bp(m) {
+        padding-right: 0;
       }
     }
   }
